--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,16 +17,26 @@ add_executable(cmd_parser-tests
     cmd_parser-tests.cpp
     boost-unit-test.hpp
 	
-	misc-tests.cpp
+    misc-tests.cpp
+    command-tests.cpp
+    command_tree-tests.cpp
 	
-	# src files for vs ide support
-	"${_INCLUDE_DIR}/command_parser.hpp"
-    "${_INCLUDE_DIR}/number_serializer.hpp"
+    # src files for vs ide support
+    "${_INCLUDE_DIR}/all.hpp"
+
+    "${_INCLUDE_DIR}/command_delegate.hpp"
+    "${_INCLUDE_DIR}/command.hpp"
+    "${_INCLUDE_DIR}/command_tree.hpp"
+    
     "${_INCLUDE_DIR}/serializer.hpp"
+    "${_INCLUDE_DIR}/number_serializer.hpp"
+
+    "${_INCLUDE_DIR}/detail/callable_signature_deduction.hpp"
+    "${_INCLUDE_DIR}/detail/token_stream.hpp"
 )
 target_link_libraries(cmd_parser-tests
     PUBLIC
-		cmd_parser
+		cmd-tree-parser
         ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
 )
 target_include_directories(cmd_parser-tests
